--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <input class="button is-primary" type="submit" value="Show Hub-Tag" onclick="showName()">
             <input class="button is-warning" type="reset" value="Reset Glyphs" onclick="">
         </div>
-        <div id="output" style="display: none">
+        <div id="output">
             Paste this into any text chat on the EisHub server:
           <div class="Name">/nick <output id="name"></output> <output id="platform"></output>:<output id="gamemode"></output></div>
         </div>
