--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
     <div class="container" style="width: min(500px, 90%);">
         <h1 class="title">Fix your name</h1>
         <form>
-            <div>
+            <div class="inputDiv">
                 <label for="name_input">Enter your name:</label>
                 <input type="text" id="name_input">
             </div>
-            <div>
+            <div class="inputDiv">
                 <label>Select your platform:</label>
                 <select id="platform_input">
                     <option value="">
@@ -64,7 +64,7 @@
                     <option value="XB">Xbox
                 </select>
             </div>
-            <div>
+            <div class="inputDiv">
                 <label>Select your game mode:</label>
                 <select id="gamemode_input">
                     <option value="">
