--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </div>
         <div>
             <button id="btn" class="button is-outlined is-primary" onclick="copyText('outputDiv', 'btn')">Copy
-                wikicode</button>
+                command</button>
         </div>
     </div>
 </body>
