--- a/index.html
+++ b/index.html
@@ -72,13 +72,10 @@
             </div>
             <div class="inputDiv">
                 <label>Select your game mode:</label>
-                <select id="gamemode_input">
-                    <option value="">
-                    <option value="Normal">Normal
-                    <option value="Survival">Survival
-                    <option value="Permadeath">Permadeath
-                    <option value="Creative">Creative
-                </select>
+                <input id="normal" type="checkbox" value="Normal"><label for="normal">&nbsp;Normal</label>
+                <input id="survival" type="checkbox" value="Survival"><label for="survival">&nbsp;Survival</label>
+                <input id="permadeath" type="checkbox" value="Permadeath"><label for="permadeath">&nbsp;Permadeath</label>
+                <input id="creative" type="checkbox" value="Creative"><label for="creative">&nbsp;Creative</label>
             </div>
         </form>
         <div class="actions hide">
