don't throw error on reset

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 				checkbox.checked = false
 			}
 			showName()
+			document.getElementById('errorDiv').style.display = 'none';
 		}
 
 		// detects multiple checkboxes with same name and puts them into array
