add link to linktree

--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
 </head>
 
 <body>
-	<div class="container" style="width: min(500px, 90%);">
+	<div class="container">
+		<nav><a href=".." title="Other pages">&larr; View other pages</a></nav>
 		<h1 class="title">Fix your name</h1>
 		<form>
 			<div class="inputDiv">
