fix copy-paste into Discord (hopefully)

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 		</div>
 		<div id="output" style="display: none">
 			Paste this into any text chat on the EisHub server:
-			<div class="Name" id="outputDiv">/nick <output id="name"></output></output></div>
+			<div class="Name" id="outputDiv">/nick new_nick:<output id="name"></output></output></div>
 		</div>
 		<div>
 			<button style="display: none" id="btn" class="button is-outlined is-primary"
